kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: jdelpino-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: coto2412/invexa-backend:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: backend-storage
              mountPath: /data
      volumes:
        - name: backend-storage
          persistentVolumeClaim:
            claimName: backend-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: jdelpino-dev
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
