kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: jdelpino-dev
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
